# restaurant

./: README.md  pyproject.toml  requirements.txt  restaurant.db  test_restaurant.db
app/: crud.py  database.py  main.py  models.py  schemas.py
tests/: conftest.py  test_menu.py
